--- a/location/src/main/resources/application.properties
+++ b/location/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=location
+server.port=8052
+spring.application.name=location-service
+eureka.client.service-url.defaultZone=http://localhost:8192/eureka
