--- a/weather/src/main/resources/application.properties
+++ b/weather/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8042
 appid=b34926f2cc396bfdf67db2678101424c
 url.weather=https://api.openweathermap.org/data/2.5/weather
-spring.application.name=weather
+spring.application.name=weather-info-service
+eureka.client.service-url.defaultZone=http://localhost:8192/eureka
