--- a/person/src/main/resources/application.properties
+++ b/person/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8089
 spring.application.name=person-service
 eureka.client.service-url.defaultZone=http://localhost:8192/eureka/
+location.url=location-service
